--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "thunk": "^0.0.1",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11"
   },
