--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
+    "react-toastify": "^9.0.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "thunk": "^0.0.1",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11"
